--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Victor",
   "license": "ISC",
   "dependencies": {
+    "mongoose": "^5.11.15",
     "body-parser": "^1.20.2",
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
