--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^5.11.15",
     "body-parser": "^1.20.2",
     "errorhandler": "^1.5.1",
+    "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
